--- a/public/css/output.css
+++ b/public/css/output.css
@@ -4353,12 +4353,13 @@ h1, h2, h3, h4, h5, h6 {
   left: 50%;
   width: 100%;
   max-width: 1000px;
-  max-height: calc(100% - 10px);
+  height: calc(100% - 10px);
   transition: transform 0.45s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.45s ease;
   transform: translate(-50%, -50%);
   opacity: 0;
   z-index: 0;
   pointer-events: none;
+  overflow: hidden;
 }
 
 .ph-slide-active {
@@ -4431,7 +4432,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 0.5rem;
   overflow: hidden;
   width: 100%;
-  max-height: 100%;
+  height: 100%;
 }
 
 .ph3-img-col {
